[gd_scene load_steps=7 format=3 uid="uid://jfhioe82ne6x"]

[ext_resource type="Script" path="res://objects/portal/key/portal_key.gd" id="1_5sbyg"]
[ext_resource type="PackedScene" uid="uid://cpwavtj0hvrlr" path="res://objects/interactive_area/interactive_area.tscn" id="1_nbwcf"]
[ext_resource type="Texture2D" uid="uid://bj1gkl2qjwpgu" path="res://resources/sprites/key.png" id="2_tbjxo"]

[sub_resource type="Animation" id="Animation_bg7vt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_yrwh2"]
resource_name = "show"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_osrxb"]
_data = {
"RESET": SubResource("Animation_bg7vt"),
"show": SubResource("Animation_yrwh2")
}

[node name="PortalKey" type="RigidBody2D"]
collision_layer = 4
script = ExtResource("1_5sbyg")

[node name="InteractiveArea" parent="." instance=ExtResource("1_nbwcf")]
position = Vector2(0, -2)
id = "portal_key"
ui_name = "Ключ"
ui_desc = "Взять"
delete_after = true
size = Vector2(64, 28)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("2_tbjxo")

[node name="Polygon" type="CollisionPolygon2D" parent="."]
scale = Vector2(1e-05, 1e-05)
polygon = PackedVector2Array(32, 12, 32, -16, 8, -16, 8, -4, -28, -4, -32, -4, -32, 0, -32, 4, -28, 4, -28, 0, -24, 0, -24, 8, -20, 8, -20, 0, -16, 0, -16, 8, -12, 8, -12, 0, -8, 0, -8, 4, -4, 4, -4, 0, 8, 0, 8, 12)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_osrxb")
}

[connection signal="tree_exited" from="InteractiveArea" to="." method="_on_interactive_area_tree_exited"]
